Chrome browser.  [Brad Oaks]

=item * 

When Bulk Editting something with a C<< <p> >> tag as a separator,
we now strip off any remaining stray closing C<< </p> >> tags as
well. [Michael Peters]

=item *

When someone steals a story or template from a user, give a more
descriptive error message including the name of the person who stole
it. [Michael Peters]

=back

=head2 3.13 - Apr, 5 2011

=over

=item *

Fixed display issue of time selector in Krang::ElementClass::DateTime
(thanks to Mike Lampson for this patch). [Bodo Schulze]

=item *

Fixed bug where you couldn't uncheck the "Show Story Type and Version"
checkbox on the "Find Stories" screen. [Michael Peters]

=item *

Fixed bug where you couldn't uncheck the "Search full text?" checkbox
on the "Find Templates" screen. [Michael Peters]

=item *

C<hidden> parameters of elements can now be a subroutine reference which
will be executed at runtime and that value used. [Michael Peters]

=item *

Fixed problems with un-localized C<$@> which could make some error
messages not appear in the logs. [Michael Peters]

=item *

Fixed wacky partial error screen when unexpected erorrs happened during
publish from the web UI. [Michael Peters]

=back

=head2 3.12 - Jan, 13 2011

=over

=item *

Added C<--NoStart> option to F<bin/krang_install> when you want to install
but then later tweek things (like F<conf/krang.conf>) before starting the
servers. [Michael Peters]

=item *

Added C<--NoDB> option to F<bin/krang_install> for use when you already
have an existing Krang DB and want a new install to use that. [Michael Peters]

=item *

Added "hostname dictionary" feature to F<krang.conf> so that you can
specify different values for configuration directives per-hostname.
This allows multiple machines in a Krang cluster to share the same
F<krang.conf> file. [Michael Peters]

=item *

Fix bug in F<krang_ctl> that incorrectly used C<sudo> when
starting/stopping the scheduler. [Michael Peters]

=item *
