@@ -1827,7 +1827,7 @@ sub _do_find {
           title
           url
           class
-          below_primary_category_id
+          below_category_id
           story_id
           contrib_simple
           creator_simple
@@ -1903,7 +1903,7 @@ sub _do_find {
 
         # If we're showing an advanced search, set up the form
         $tmpl_data{category_chooser} = category_chooser(
-            name       => 'search_below_primary_category_id',
+            name       => 'search_below_category_id',
             query      => $q,
             formname   => 'search_form',
             persistkey => pkg('Story'),
