@@ -339,8 +339,8 @@ other_search_rm = function() {
     <input name="history_return_params" value="<tmpl_var escape=html search_contrib_simple>" type="hidden">
     <input name="history_return_params" value="search_creator_simple" type="hidden">
     <input name="history_return_params" value="<tmpl_var escape=html search_creator_simple>" type="hidden">
-    <input name="history_return_params" value="search_below_primary_category_id" type="hidden">
-    <input name="history_return_params" value="<tmpl_var escape=html search_below_primary_category_id>" type="hidden">
+    <input name="history_return_params" value="search_below_category_id" type="hidden">
+    <input name="history_return_params" value="<tmpl_var escape=html search_below_category_id>" type="hidden">
     <input name="history_return_params" value="search_full_text_string" type="hidden">
     <input name="history_return_params" value="<tmpl_var escape=html search_full_text_string>" type="hidden">
   <tmpl_else>
@@ -406,8 +406,8 @@ other_search_rm = function() {
     <input name="return_params" value="<tmpl_var escape=html search_contrib_simple>" type="hidden">
     <input name="return_params" value="search_creator_simple" type="hidden">
     <input name="return_params" value="<tmpl_var escape=html search_creator_simple>" type="hidden">
-    <input name="return_params" value="search_below_primary_category_id" type="hidden">
-    <input name="return_params" value="<tmpl_var escape=html search_below_primary_category_id>" type="hidden">
+    <input name="return_params" value="search_below_category_id" type="hidden">
+    <input name="return_params" value="<tmpl_var escape=html search_below_category_id>" type="hidden">
     <input name="return_params" value="search_full_text_string" type="hidden">
     <input name="return_params" value="<tmpl_var escape=html search_full_text_string>" type="hidden">
   <tmpl_else>
